<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity"
    android:clipToPadding="false"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".ui.MainActivity"
        android:clipToPadding="false"
        >

        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Active!"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            />

        <Button
            android:id="@+id/activateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_activate"
            style="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/enableSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_enable_service"
            android:padding="16dp"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/skipNotificationSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_skip_notification"
            android:padding="16dp"
            />

        <TextView
            android:id="@+id/skipNotificationDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/pref_skip_notification_explanation"
            android:textColor="@color/black"
            style="@style/TextAppearance.AppCompat.Caption"
            tools:visibility="visible"
            android:visibility="gone"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/skipCallLogSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_skip_call_log"
            android:padding="16dp"
            />

        <TextView
            android:id="@+id/skipCallLogDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/pref_skip_call_log_description"
            android:textColor="@color/black"
            style="@style/TextAppearance.AppCompat.Caption"
            tools:visibility="visible"
            android:visibility="gone"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/declineUnknownCallers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_decline_unknown_callers"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="4dp"
            tools:checked="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/pref_decline_unknown_callers_explanation"
            android:textColor="@color/black"
            style="@style/TextAppearance.AppCompat.Caption"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/declineAuthenticationFailures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_decline_authentication_failures"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="4dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/pref_failed_auth_check_explanation"
            android:textColor="@color/black"
            style="@style/TextAppearance.AppCompat.Caption"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/textView3"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/whitelist"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

            <EditText
                android:id="@+id/whitelistPrefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone"
                android:text="+46"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/pref_whitelist_explanation"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/warning"
            android:paddingBottom="16dp"
            >

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/declineUnauthenticatedCallers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_decline_unauthenticated_callers"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/pref_caller_auth_warning"
                android:textColor="@color/black"
                style="@style/TextAppearance.AppCompat.Caption"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
